# curso-agentes-langgraph

./: .env-example  README.md  justfile  langgraph.json  pyproject.toml
notebooks/: 04-llm.ipynb  05-rag.ipynb  07-structured-output.ipynb  10-tools.ipynb
src/agents/: code_review.py  deep_agent.py  evaluator.py  main.py  rag.py  react.py  simple.py
src/agents/support/nodes/booking/: node.py
src/agents/support/nodes/conversation/: node.py
src/agents/support/nodes/extractor/: node.py
src/agents/support/routes/intent/: route.py
